# pico-ir

./: .gitignore  LICENSE.md  README.md
parseir/: README.md  index.ts  package-lock.json
parseir/data/: frames.bin.sony  frames.hex.isy  frames.hex.sony
rxir/: CMakeLists.txt  rxir.c
txir/: CMakeLists.txt  txir.c
